Support link and img tags
Close #6.

--- a/test/valid/index.html
+++ b/test/valid/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+	<link href="/index.css" />
+</head>
+
 <body>
 	<a href="/" />
 	<a href="/foo.html" />
+	<img src="/foo.png" />
 </body>
 
 </html>
