--- a/test/valid/index.html
+++ b/test/valid/index.html
@@ -8,6 +8,9 @@
 <body>
 	<a href="/" />
 	<a href="/foo.html" />
+	<a href="/f
+		oo
+		. html" />
 	<a href="#hello" />
 	<img src="/foo.png" />
 	<p id="hello">Hello!</p>
